WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173732
REGRESSION(
r217695
): Offscreen/overflowed items not being rendered while translating in-frame
https://bugs.webkit.org/show_bug.cgi?id=173732
Summary
REGRESSION(r217695): Offscreen/overflowed items not being rendered while tran...
Antti Koivisto
Reported
2017-06-22 13:45:27 PDT
We need backing for layers that will animate to view.
Attachments
patch
(14.75 KB, patch)
2017-06-22 14:24 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(14.81 KB, patch)
2017-06-22 14:30 PDT
,
Antti Koivisto
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews121 for ios-simulator-wk2
(912.34 KB, application/zip)
2017-06-22 15:58 PDT
,
Build Bot
no flags
Details
patch
(14.61 KB, patch)
2017-06-22 18:44 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(14.61 KB, patch)
2017-06-22 20:55 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-06-22 13:47:58 PDT
<
rdar://problem/32778748
>
Antti Koivisto
Comment 2
2017-06-22 14:24:29 PDT
Created
attachment 313661
[details]
patch
Antti Koivisto
Comment 3
2017-06-22 14:30:01 PDT
Created
attachment 313662
[details]
patch
Simon Fraser (smfr)
Comment 4
2017-06-22 14:39:30 PDT
Comment on
attachment 313662
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=313662&action=review
> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1399 > + auto bounds = FloatRect(m_boundsOrigin, size()); > + if (auto extent = animationExtent()) {
Did you verify that bounds and extent are in the same coordinate space?
> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2303 > + || commitState.ancestorWithTransformAnimationIntersectsCoverageRect // FIXME: Compute backing exactly for descendants of animating layers .
No space before period.
> LayoutTests/compositing/backing/transform-transition-from-outside-view.html:33 > + .dot { > + position: absolute; > + top: 0; > + left: 0; > + height: 4px; > + width: 4px; > + background-color: silver; > + }
You're not using dots.
> LayoutTests/compositing/backing/transform-transition-from-outside-view.html:36 > + -webkit-transform: translateX(0px);
Transforms are unprefixed.
Build Bot
Comment 5
2017-06-22 15:58:15 PDT
Comment on
attachment 313662
[details]
patch
Attachment 313662
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3980253
New failing tests: compositing/backing/transform-transition-from-outside-view.html
Build Bot
Comment 6
2017-06-22 15:58:16 PDT
Created
attachment 313668
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Antti Koivisto
Comment 7
2017-06-22 16:47:10 PDT
> Did you verify that bounds and extent are in the same coordinate space?
Both seem to be in the coordinate space used by RenderLayer::calculateLayerBounds so I think this is correct.
Antti Koivisto
Comment 8
2017-06-22 18:44:57 PDT
Created
attachment 313682
[details]
patch
Antti Koivisto
Comment 9
2017-06-22 20:55:12 PDT
Created
attachment 313687
[details]
patch
WebKit Commit Bot
Comment 10
2017-06-22 21:34:18 PDT
Comment on
attachment 313687
[details]
patch Clearing flags on attachment: 313687 Committed
r218735
: <
http://trac.webkit.org/changeset/218735
>
WebKit Commit Bot
Comment 11
2017-06-22 21:34:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug